--- a/test_app/templates/home.html
+++ b/test_app/templates/home.html
@@ -1,10 +1,7 @@
 <!doctype html>
-<html>
-  <head>
-    <title>Home Page</title>
-  </head>
-  <body>
-    <h1>Home Page</h1>
-    <p> Hello User logged in !!</p>
-  </body>
-</html>
+<title>Hello from Flask</title>
+{% if name %}
+  <h1>Hello {{ name }}!</h1>
+{% else %}
+  <h1>Hello, World!</h1>
+{% endif %}
