--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -15,5 +15,6 @@
       <input type="password" id="password" name="password"><br><br>
       <input type="submit" value="Login">
     </form>
+    <p class="bottom">Do not have an account? <a class="bottom" href="{{url_for('register')}}"> Register here</a></p>
   </body>
 </html>
